[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

[dependencies]
futures = "0.3.25"
hyper = "0.14.23"
reqwest = "0.11.13"
serde_json = "1.0.91"
tokio = {version = "^1.23.0", features = ["full"]}
tokio-serde = {version = "^0.8.0", features = ["json"]}
tokio-util = "0.7.4"
